compiler/test/fail_compilation/responsefile.d
// REQUIRED_ARGS: @ABC

/*
TEST_OUTPUT:
---
Error: cannot open response file '@ABC'
---
*/
